--- a/2023/09-cooper/beamerthemeBIPS.sty
+++ b/2023/09-cooper/beamerthemeBIPS.sty
@@ -103,13 +103,14 @@
 
 
 %%% Template for the frametitle
+%%% original version
 \setbeamertemplate{frametitle}{
 	\vspace*{.5cm}%
-	\begin{beamercolorbox}[wd=12cm, center]{frametitle}
+	\begin{beamercolorbox}[wd=10cm, center]{frametitle}
 		\usebeamerfont{frametitle}\insertframetitle
 	\end{beamercolorbox}
 	\vspace*{-.2cm}%
-	\begin{beamercolorbox}[wd=12cm, center]{framesubtitle}
+	\begin{beamercolorbox}[wd=10cm, center]{framesubtitle}
 		\usebeamerfont{framesubtitle}\insertframesubtitle
 	\end{beamercolorbox}
 	% add the line
@@ -117,6 +118,24 @@
 		\draw[BIPSTextGray,path fading=east] (-1,1.2) -- (8.5,1.2);
 	\end{tikzpicture}
 }
+
+% via sophie
+% \setbeamertemplate{frametitle}{
+% 	\vspace*{.5cm}%
+% 	\begin{beamercolorbox}[wd=9cm, center]{frametitle}
+% 		\usebeamerfont{frametitle}\insertframetitle
+% 	\end{beamercolorbox}
+% 	\vspace*{-.1cm}%
+% 	\begin{beamercolorbox}[wd=9cm, center]{framesubtitle}
+% 		\usebeamerfont{framesubtitle}\insertframesubtitle
+% 	\end{beamercolorbox}
+% 	% add the line
+% 	\vspace*{-.5cm}%
+% 	\begin{tikzpicture}
+% 		\draw[BIPSTextGray,path fading=east] (-1,1.2) -- (8.5,1.2);
+% 	\end{tikzpicture}
+% }
+
 
 %%% The Background -- also contains the logo
 \setbeamertemplate{background}{
